# agmem

./: .flake8  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  FILES_CHANGED.txt  FINAL_VALIDATION_REPORT.md  IMPLEMENTATION_COMPLETE.txt  IMPLEMENTATION_REPORT.md  ISSUES_RESOLUTION_FINAL.md  LICENSE  MANIFEST.in  QUICK_REFERENCE.md  README.md  SECURITY.md  TEST_RESULTS_SUMMARY.md  demo.py  issued.md  isuues.md  pyproject.toml  setup.py
.github/: README.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-and-publish.yml  release-on-tag.yml
current/: wip.md
current/episodic/: session1.md  wip.md
current/procedural/: coding-workflow.md
current/semantic/: user-preferences.md
docs/: AGMEM_PUBLISHING_SETUP.md  CONFIG.md  FEDERATED.md  FINAL_COMPLETION_REPORT.md  FINAL_STATUS_REPORT.md  GTM.md  HEALTH_MONITORING.md  IMPLEMENTATION_COMPLETE_SUMMARY.md  KNOWLEDGE_GRAPH.md  PACKAGE_UPDATES_VERIFICATION.md  QUICK_REFERENCE.md  SEQUENTIAL_VALIDATION.md  STEP10_SOLID_REFACTORING_COMPLETION.md  STEP8_HEALTH_MONITORING_COMPLETION.md  STEP9_DELTA_ENCODING_COMPLETION.md  TEST_REPORT.md  knowledge_graph_visualization.html
docs/aux/: INSTALL.md  MARKET_POSITIONING.md  README.md  STRESS_TEST_REPORT.md
examples/: basic_workflow.sh
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/hooks/: useApi.ts
frontend/src/pages/: Agents.tsx  Dashboard.tsx  Graph.tsx  Timeline.tsx
memvcs/: __init__.py  cli.py
memvcs/commands/: __init__.py  add.py  audit.py  base.py  blame.py  branch.py  checkout.py  clean.py  clone.py  commit.py  daemon.py  decay.py  diff.py  distill.py  federated.py  fsck.py  garden.py  gc.py  graph.py  init.py  log.py  mcp.py  merge.py  pack.py  prove.py  pull.py  push.py  recall.py  reflog.py  remote.py  repair.py  reset.py  resolve.py  resurrect.py  search.py  serve.py  show.py  stash.py  status.py  tag.py  (+5 more)
memvcs/coordinator/: README.md  __init__.py  server.py
memvcs/core/: __init__.py  access_index.py  agents.py  archaeology.py  audit.py  collaboration.py  compliance.py  compression_metrics.py  compression_pipeline.py  confidence.py  config_loader.py  consistency.py  constants.py  crypto_verify.py  daemon.py  decay.py  delta.py  diff.py  distiller.py  encryption.py  fast_similarity.py  federated.py  gardener.py  hooks.py  ipfs_remote.py  knowledge_graph.py  merge.py  objects.py  pack.py  pii_scanner.py  privacy_budget.py  privacy_validator.py  private_search.py  protocol_builder.py  refs.py  remote.py  repository.py  schema.py  search_index.py  semantic_graph.py  (+8 more)
memvcs/core/llm/: __init__.py  anthropic_provider.py  base.py  factory.py  openai_provider.py
memvcs/core/storage/: __init__.py  base.py  gcs.py  local.py  s3.py
memvcs/health/: __init__.py  monitor.py
memvcs/integrations/: __init__.py  mcp_server.py
memvcs/integrations/web_ui/: __init__.py  server.py  websocket.py
memvcs/integrations/web_ui/static/: index.html
memvcs/retrieval/: __init__.py  base.py  pack.py  recaller.py  strategies.py
memvcs/utils/: __init__.py  helpers.py
scripts/: stress_test.py  test_full_flow.py
services/: README.md  agmem-daemon@.service  com.agmem.daemon.plist
tests/: __init__.py  run_new_tests.py  test_access_index.py  test_advanced_commands.py  test_archaeology.py  test_audit.py  test_collaboration.py  test_commit_importance.py  test_compliance.py  test_compression_pipeline.py  test_confidence.py  test_consistency.py  test_crypto_verify.py  test_daemon.py  test_decay.py  test_delta_encoding.py  test_distiller_dp.py  test_edge_cases.py  test_encryption.py  test_federated.py  test_health_monitor.py  test_ipfs_integration.py  test_ipfs_remote.py  test_llm_provider.py  test_objects.py  test_pack_gc.py  test_performance_benchmarks.py  test_phase3.py  test_pii.py  test_plan_features.py  test_privacy_budget.py  test_progressive_search.py  test_repository.py  test_resolve_helpers.py  test_retrieval.py  test_session.py  test_temporal_index.py  test_trust.py  test_web_api.py  test_zk_proofs.py  (+3 more)
