[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agmem"
version = "0.3.0"
description = "Agentic Memory Version Control System - Git for AI agent memories"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "agmem Team", email = "team@agmem.dev"}
]
keywords = [
    "ai",
    "agent",
    "memory",
    "version-control",
    "git",
    "vcs",
    "llm",
    "merkle",
    "audit",
    "encryption",
    "differential-privacy",
    "trust",
    "multi-agent",
    "health-monitoring",
    "delta-encoding",
    "ipfs",
    "federated",
    "time-travel",
    "semantic-graph",
    "memory-agents",
    "confidence-scoring",
    "session-management",
    "collaboration",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security :: Cryptography",
]
requires-python = ">=3.9"
dependencies = [
    "PyYAML>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black==24.10.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
    "bandit[toml]>=1.7.0",
]
# Multi-provider LLM (OpenAI + Anthropic) for gardener, distiller, consistency, merge
llm = [
    "openai>=1.0.0",
    "anthropic>=0.18.0",
]
mcp = [
    "mcp>=1.0.0",
]
vector = [
    "sqlite-vec>=0.1.0",
    "sentence-transformers>=2.0.0",
]
web = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
]
cloud = [
    "boto3>=1.34.0",
    "google-cloud-storage>=2.0.0",
]
gardener = [
    "scikit-learn>=1.3.0",
    "openai>=1.0.0",
]
anthropic = [
    "anthropic>=0.18.0",
]
pii = [
    "presidio-analyzer>=2.2.0",
]
daemon = [
    "watchdog>=3.0.0",
]
graph = [
    "networkx>=3.0",
]
pack = [
    "tiktoken>=0.5.0",
]
distill = [
    "openai>=1.0.0",
]
verify = [
    "openai>=1.0.0",
]
# Cryptographic commit verification (Merkle, Ed25519) and encryption at rest (AES-256-GCM, Argon2id)
crypto = [
    "cryptography>=41.0.0",
]
ipfs = [
    "requests>=2.28.0",
]
# IPFS daemon (optional; gateway works without it)
ipfs-daemon = [
    "ipfshttpclient>=0.8.0",
]
# Federated coordinator server
coordinator = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.22.0",
    "pydantic>=2.0.0",
]
all = [
    "mcp>=1.0.0",
    "cryptography>=41.0.0",
    "sqlite-vec>=0.1.0",
    "sentence-transformers>=2.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "boto3>=1.34.0",
    "google-cloud-storage>=2.0.0",
    "scikit-learn>=1.3.0",
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "watchdog>=3.0.0",
    "networkx>=3.0",
    "tiktoken>=0.5.0",
    "presidio-analyzer>=2.2.0",
    "requests>=2.28.0",
    "pydantic>=2.0.0",
]

[project.scripts]
agmem = "memvcs.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["memvcs*"]

[project.urls]
Homepage = "https://github.com/vivek-tiwari-vt/agmem"
Documentation = "https://github.com/vivek-tiwari-vt/agmem#readme"
Repository = "https://github.com/vivek-tiwari-vt/agmem"
"Bug Tracker" = "https://github.com/vivek-tiwari-vt/agmem/issues"

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
